# RoboticVisionExamples

./: .gitignore
HW1-LearningOpenCV/: CMakeLists.txt  DetectBallCatcher.cpp  DisplayVideo.cpp
HW2-CameraCalibration/: CMakeLists.txt  CalibrateCamera.cpp  DistortionCorrection.cpp  MyCameraCalibration.cpp  MyDistortionCorrection.cpp  ObjectPose.cpp  hmwrk2.odt  my_params.yaml
HW3-StereoCalibRectification/: CalibrateCamera.cpp  EpipolarLines.cpp  Rectification.cpp  StereoCalibration.cpp  right_params.yaml  stereo_params.yaml
HW4-3DReconstTrajectEst/: BaseBallTrack.cpp  Measurement.cpp  SaveROIs.cpp  all_calibration_roi.yaml  all_xyz.yaml  calibration_rects.yaml  left_params.yaml  plotXYZ.py  stereo_rectify_params.yaml
HW5-MotionFields/: CMakeLists.txt  FeatureMatching.cpp  MultiFrameTracking.cpp  OpitcalFlow.cpp
HW6-StructureFromMotion/: CMakeLists.txt  GetPixelLocation.cpp  KnownIntrinsicMotionRect.cpp  MotionRectification.cpp  SFMCameraParameters.yaml  guess_params.yaml
