cmake_minimum_required(VERSION 2.8)
project(Homework1)
find_package(OpenCV REQUIRED)
add_executable(DisplayImage DisplayImage.cpp)
add_executable(DisplayVideo DisplayVideo.cpp)
add_executable(DetectBallCatcher DetectBallCatcher.cpp)

target_link_libraries(DisplayImage ${OpenCV_LIBS})
target_link_libraries(DisplayVideo ${OpenCV_LIBS})
target_link_libraries(DetectBallCatcher ${OpenCV_LIBS})
