cmake_minimum_required(VERSION 2.8)
project(Homework1)
find_package(OpenCV REQUIRED)
add_executable(CalibrateCamera CalibrateCamera.cpp)
add_executable(DistortionCorrection DistortionCorrection.cpp)
add_executable(ObjectPose ObjectPose.cpp)
add_executable(MyCameraCalibration MyCameraCalibration.cpp)
add_executable(MyDistortionCorrection MyDistortionCorrection.cpp)

target_link_libraries(CalibrateCamera ${OpenCV_LIBS})
target_link_libraries(DistortionCorrection ${OpenCV_LIBS})
target_link_libraries(ObjectPose ${OpenCV_LIBS})
target_link_libraries(MyCameraCalibration ${OpenCV_LIBS})
target_link_libraries(MyDistortionCorrection ${OpenCV_LIBS})
