cmake_minimum_required(VERSION 3.4)
project(Homework5)
find_package(OpenCV REQUIRED)
add_executable(OpitcalFlow OpitcalFlow.cpp)
add_executable(FeatureMatching FeatureMatching.cpp)
add_executable(MultiFrameTracking MultiFrameTracking.cpp)
# add_executable(Rectification Rectification.cpp)
# add_executable(MyDistortionCorrection MyDistortionCorrection.cpp)

target_link_libraries(OpitcalFlow ${OpenCV_LIBS})
target_link_libraries(FeatureMatching ${OpenCV_LIBS})
target_link_libraries(MultiFrameTracking ${OpenCV_LIBS})
# target_link_libraries(Rectification ${OpenCV_LIBS})
# target_link_libraries(MyDistortionCorrection ${OpenCV_LIBS})
