cmake_minimum_required(VERSION 3.4)
project(Homework6)
find_package(OpenCV REQUIRED)
add_executable(MotionRectification MotionRectification.cpp)
add_executable(KnownIntrinsicMotionRect KnownIntrinsicMotionRect.cpp)
add_executable(GetPixelLocation GetPixelLocation.cpp)
# add_executable(Rectification Rectification.cpp)
# add_executable(MyDistortionCorrection MyDistortionCorrection.cpp)

target_link_libraries(MotionRectification ${OpenCV_LIBS})
target_link_libraries(KnownIntrinsicMotionRect ${OpenCV_LIBS})
target_link_libraries(GetPixelLocation ${OpenCV_LIBS})
# target_link_libraries(Rectification ${OpenCV_LIBS})
# target_link_libraries(MyDistortionCorrection ${OpenCV_LIBS})
